fix line-height on IE

--- a/web/themes/custom/legacy/css/src/_hack.ie.less
+++ b/web/themes/custom/legacy/css/src/_hack.ie.less
@@ -33,6 +33,9 @@
     //********************************//
     //  ### xmeter
     //********************************//
+    html {
+      line-height: @p-vru;
+    }
     h1, h2, h3, h4, h5, h6,
     p, pre, figure, blockquote,
     ol, ul, dl,
